--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "axios": "^1.6.4"
     },
     "dependencies": {
-        "@vitejs/plugin-react": "^4.3.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
