--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4"
+        "axios": "^1.6.4",
+        "laravel-vite-plugin": "^1.0.5"
     },
     "dependencies": {
+        "@vitejs/plugin-react": "^4.3.2",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
