--- a/package.json
+++ b/package.json
@@ -6,12 +6,18 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
-        "laravel-vite-plugin": "^1.0.5"
+        "axios": "^1.6.4"
     },
     "dependencies": {
-        "@vitejs/plugin-react": "^4.3.2",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1"
-    }
+    },
+    "name": "prototype",
+    "version": "1.0.0",
+    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+    "main": "index.js",
+    "directories": {
+        "test": "tests"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
